set better UI for visitors to log in and fix terms of use bad readability

--- a/app/src/main/res/layout/activity_terms_of_use.xml
+++ b/app/src/main/res/layout/activity_terms_of_use.xml
@@ -16,101 +16,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="Privacidade e Proteção de Dados – LGPD \n
-Termos de uso\n
-Estes Termos de Uso (“Termos de Uso“) contêm as condições gerais aplicáveis aos serviços oferecidos pelo CASA FLOW APLICATIVOS E SOFTWARE MEI., (doravante denominado simplesmente “CasaFlow“), por meio do Aplicativo CasaFlow disponível na loja Google Play e Android Store.\n
-\n
-Breve apresentação do CasaFlow:\n
-O CasaFlow é um aplicativo de controle de gastos e finanças pessoais que permite a inclusão manual de dados financeiros fornecidos pelos usuários com o objetivo de controlar seus gastos diários e ou mensais.
-Caso tenha qualquer dúvida sobre os Termos de Uso e/ou a Política de Privacidade, recomendamos que entre em contato com o CasaFlow por meio do email: marcosferreiraf22@gmail.com.\n
-\n
-\nDEFINIÇÕES
-\n
-Anonimização
-significa a utilização de meios técnicos razoáveis e disponíveis no momento do tratamento de dados, por meio dos quais um dado deixa de ser associado a um Usuário.\n
-\n
-Aplicativo\n
-Aplicativo fornecido por um terceiro.
-\n
-\nConteúdo
-significa toda e qualquer informação disponibilizada por meio do Aplicativo, tais como textos, dados, software, imagens, vídeos, áudios, recursos interativos, incluindo os códigos fonte empregados para exibição desses conteúdos, como aqueles em linguagem HTML, CSS, PHP, entre outros.
-\n
-\nDados Pessoais
-significa quaisquer dados do Usuário que, de alguma forma, permitam sua identificação, tais como, mas não se limitando a, nome completo, CPF, RG endereço, número de telefone e endereço de e-mail.
-\n
-\nFinalidade
-significa a realização do tratamento dos dados para propósitos informados ao Usuário, nos termos da Política de Privacidade.
-\n
-\nParceiros
-são as instituições financeiras ou de pagamentos, correspondentes bancários, anunciantes, entre outros, que mantenham uma relação contratual que venham a ter parceria com a CasaFlow.
-\n
-\nPolítica de Privacidade
-significa a política de privacidade que rege as disposições sobre a utilização dos dados do Usuário pelo CasaFlow e que se encontra disponível no link www.casaflow.com.br/descadastrar.
-Se o link estiver indisponível, envie a dúvida/solicitação para o email: marcosferreiraf22@gmail.com.
-\n
-\nTratamento
-significa toda operação realizada com dados pessoais, como as que se referem a coleta, produção, recepção, classificação, utilização, acesso, reprodução, transmissão, distribuição, processamento, arquivamento, armazenamento, eliminação, avaliação ou controle da informação, modificação, comunicação, transferência, difusão ou extração.
-\n
-\nUsuário
-significa uma pessoa física, com plena capacidade de contratar, que acessa o Aplicativo e realiza o seu cadastro pessoal para utilizar as funcionalidades oferecidas pelo CasaFlow, aceitando expressamente os Termos de Uso e a Política de Privacidade.
-\n
-\nPARCEIROS E PRESTADORES DE SERVIÇOS
-\nNo futuro, com o objetivo de ajudar nossos Usuários a acessar ao marketplace financeiro, podemos divulgar produtos e serviços oferecidos por nossos Parceiros e/ou Empresas do mesmo grupo econômico que se enquadrem no perfil do Usuário como, por exemplo, empréstimos, seguros, entre outros produtos, financeiros ou não.
-\n
-O CasaFlow poderá divulgar tais produtos e/ou serviços por meio de aplicativo de empresas do mesmo grupo econômico, considerando o perfil do Usuário.
-\n
-Por esse motivo, o Aplicativo poderá conter links para websites/aplicativos dos Parceiros e Empresas coligadas do CasaFlow, para os quais o Usuário poderá ser direcionado caso clique em tais links. O CasaFlow não tem controle sobre tais websites/aplicativos dos Parceiros, e, portanto, não garante a disponibilidade ou se responsabiliza por conteúdo, publicidade, produtos, serviços ou outros materiais contidos ou disponibilizados por meio de tais websites/aplicativos.
-\n
-As plataformas dos Parceiros e das Empresas coligadas do CasaFlow não estão sujeitas a estes termos. Sendo assim, recomendamos que leia atentamente os Termos de Uso e a Política de Privacidade aplicáveis a cada plataforma para a qual seja direcionado.
-\n
-Além disso, o CasaFlow pode contar com prestadores de serviço para auxílio e/ou completude das funcionalidades do Aplicativo, explicamos isso em nossa política sobre como tratamos seus dados aqui dentro.
-\n
-\nPROPRIEDADE INTELECTUAL
-\nO Usuário não adquire, por meio dos presentes Termos de Uso ou da Política de Privacidade, nenhum direito de propriedade intelectual ou outros direitos exclusivos, incluindo patentes, desenhos, bases de dados, marcas, direitos autorais ou direitos sobre informações confidenciais ou segredos de negócio, sobre ou relacionados ao software, ao Aplicativo e/ou ao site, os quais são de propriedade exclusiva do CasaFlow.
-\n
-Caso você venha a desenvolver um novo módulo ou produto que caracterize cópia, integral ou parcial, quer seja do dicionário de dados, quer seja do programa, esse será considerado como parte do software, ficando, portanto, sua propriedade incorporada pelo CasaFlow e seu uso condicionado a estes Termos de Uso.
-\n
-\nRESPONSABILIDADES
-\nAlgumas decisões que podem ser tomadas por você implicam em riscos, então é importante que você saiba que não somos responsáveis, principalmente:
-\n
-Pelos serviços ou produtos oferecidos por Parceiros ou quaisquer terceiros, inclusive no que diz respeito a sua disponibilidade, qualidade, quantidade, características essenciais, ofertas, preços, validade da oferta, formas de pagamento ou quaisquer outros elementos a eles referentes;
-Por eventuais prejuízos sofridos pelos Usuários em razão da tomada de decisões com base nas informações disponibilizadas no Site;
-Por eventuais prejuízos sofridos pelos Usuários em razão de falhas no sistema de informática ou nos servidores que independam de culpa do CasaFlow ou em sua conectividade com a internet de modo geral, devendo o Usuário manter, às suas expensas, linha de telecomunicação, modem, software de comunicação, endereço de correio eletrônico e outros recursos necessários à comunicação com o CasaFlow;
-Pela autenticidade, validade e precisão dos dados fornecidos pelos Usuários e/ou coletadas nas plataformas das instituições financeiras.\n
-\nINDENIZAÇÃO
-\nO Usuário concorda em defender, indenizar e manter indene o CasaFlow, suas afiliadas, diretores, empregados e agentes, de e contra quaisquer encargos, ações ou demandas, incluindo, mas não limitado a honorários advocatícios razoáveis, resultantes: (i) de eventual utilização indevida do CasaFlow; ou (ii) da violação das condições ora pactuadas.
-\n
-\nPROTEÇÃO À PRIVACIDADE
-\nA forma como coletamos, armazenamos e tratamos os dados dos Usuários, bem como para quais finalidades eles poderão ser utilizados, estão descritas na Política de Privacidade do CasaFlow, que é parte integrante e inseparável destes Termos de Uso.
-\n
-\nDIREITOS DOS TITULARES DE DADOS PESSOAIS
-\nO CasaFlow se compromete a adotar medidas efetivas para a garantia dos direitos dos titulares de dados pessoais controlados pelo CasaFlow, conforme especificados pela Lei Geral de Proteção de Dados Pessoais – LGPD, e demais leis e regulamentos brasileiros aplicáveis à proteção de dados pessoais.
-\n
-\nALTERAÇÕES
-\nOcasionalmente, nós podemos fazer alterações nos Termos de Uso com o objetivo de melhorar as funções ou recursos existentes ou acrescentar novas funções ou recursos ao Serviço, implementar avanços científicos e tecnológicos, e ajustes técnicos razoáveis do Serviço, assegurando a operacionalidade ou a segurança, bem como por motivos legais ou regulamentares.
-\n
-Quaisquer alterações entrarão em vigor assim que publicadas. O Usuário entende e concorda que, após a publicação, o uso do CasaFlow passará a ser submetido à versão atualizada dos Termos de Uso. Se você não concordar com as modificações, recomendamos que descontinue o uso do CasaFlow.
-\n
-O CasaFlow se reserva no direito de, a seu exclusivo critério, suspender, modificar ou encerrar as atividades do Site, mediante comunicação prévia ao Usuário.
-\n
-\nCONTATO DO CASAFLOW COM OS USUÁRIOS
-\nFica combinado aqui a possibilidade da gente conversar por diversos canais (ligação, e-mail, WhatsApp, SMS, etc), tanto sobre promoções e ofertas, quanto sobre mudanças nas funcionalidades do Aplicativo/site. Caso você não queira mais ser contatado, sem problemas! Você pode solicitar, a qualquer momento, o descadastramento de seu e-mail: (i) clicando no link indicado no e-mail recebido, ou (ii) enviando uma solicitação para o e-mail: marcosferreiraf22@gmail.com.
-\n
-\nFique tranquilo, o descadastramento do seu e-mail e/ou do seu número de telefone da base não afetará o seu uso do Aplicativo ou site.
-\n
-\nDISPOSIÇÕES GERAIS
-\nCaso qualquer disposição destes Termos de Uso ou da Política de Privacidade seja considerada ilegal, nula ou inexequível por qualquer razão, as disposições restantes não serão afetadas e manter-se-ão válidas e aplicáveis na máxima extensão possível.
-\n
-\nQualquer falha do CasaFlow para impor ou exercer qualquer disposição destes Termos de Uso, da Política de Privacidade ou direitos conexos, não constitui uma renúncia a esse direito ou disposição.
-\n
-\nLEI E FORO
-\nEstes Termos de Uso e a Política de Privacidade serão interpretados de acordo com as leis do Brasil, sendo que quaisquer conflitos relacionados aos termos aqui dispostos deverão ser resolvidos pelo foro da capital do Estado de São Paulo.
-\n
-\nVigência: Estes Termos e Usos entram em vigor a partir de 31 de Julho de 2023.
-"
+            android:padding="16dp"
+            android:text="@string/terms_of_use"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -124,7 +32,7 @@ O CasaFlow se reserva no direito de, a seu exclusivo critério, suspender, modif
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="32dp"
-            android:text="Declaro que li os Termos"
+            android:text="Voltar para Cadastro"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
