--- a/app/src/main/res/layout/activity_terms_of_use.xml
+++ b/app/src/main/res/layout/activity_terms_of_use.xml
@@ -4,15 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:background="@color/casaflow">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.TermsOfUseActivity">
+        tools:context=".activity.TermsOfUseActivity"
+        android:background="@color/casaflow">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textAllTermsOfUse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
