--- a/app/src/main/res/layout/fragment_main_content.xml
+++ b/app/src/main/res/layout/fragment_main_content.xml
@@ -41,15 +41,17 @@
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@color/purple_200"
         app:mcv_selectionColor="@color/purple_200"
         app:mcv_showOtherDates="all"
-        app:mcv_tileSize="50dp" >
+        app:mcv_tileSize="50dp">
 
     </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/purple_200"
         android:elevation="5dp"
         android:orientation="horizontal"
         android:padding="8dp">
